@@ -3,3 +3,7 @@
 ## New Features
 
 - implement logging system with notification support and structured log history -- kaneryu on 2025-08-08
+
+## Bugfixes
+
+- allow for use of video as a playback MRL -- kaneryu on 2025-08-13
