@@ -4,6 +4,10 @@
 
 - implement logging system with notification support and structured log history -- kaneryu on 2025-08-08
 
+## Bugfixes
+
+- allow for use of video as a playback MRL -- kaneryu on 2025-08-13
+
 
 
 # Version 0.31
